se agrega gestion de cuentas

--- a/web/template/Admin/editarInfoAdm.html
+++ b/web/template/Admin/editarInfoAdm.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link" href="/aceptar_cuentas?dni={{usuario.dni}}">Cuentas <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/aceptar_cuentas?dni={{usuario.dni}}">Activar Cuentas <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="/list_activity?dni={{usuario.dni}}">Actividades <span class="sr-only">(current)</span></a>
@@ -21,6 +21,9 @@
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="/edit_info_adm/?dni={{usuario.dni}}">Cuenta <span class="sr-only">(current)</span></a>
+            </li>
+              <li class="nav-item">
+              <a class="nav-link" href="/gestion_cuentas_egresados/?dni={{usuario.dni}}">Gestion Cuentas <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
