--- a/web/template/Bases/BaseCategorias.html
+++ b/web/template/Bases/BaseCategorias.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="/aceptar_cuentas_admin?username={{usuario.username}}">Cuentas <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/aceptar_cuentas_admin?username={{usuario.username}}">Activar Cuentas <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/lista_categorias?username={{usuario.username}}">Categorias<span class="sr-only">(current)</span></a>
@@ -43,6 +43,9 @@
         <li class="nav-item ">
           <a class="nav-link" href="/dashboard_root?username={{usuario.username}}">Perfil</a>
         </li>
+        <li class="nav-item ">
+        <a class="nav-link" href="/gestion_cuentas_admin?username={{usuario.username}}">Gestion de Cuentas<span class="sr-only">(current)</span></a>
+      </li>
         <li class="nav-item ">
           <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
         </li>
