--- a/web/template/Bases/BaseEgresado.html
+++ b/web/template/Bases/BaseEgresado.html
@@ -11,11 +11,18 @@
   </head>
 
   <style >
-      .circular{
+    .circular{
     border-radius: 50%;
     width: 200px;
     height: 200px;
-  }
+    }
+
+    .circular1{
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    }
+
   .sangria{
       text-indent: 0.5em;
   }
