--- a/web/template/Egresado/dashboardEgresado.html
+++ b/web/template/Egresado/dashboardEgresado.html
@@ -81,6 +81,17 @@
       height: 50px;
   }
 
+    .navbar-nav {
+    width: 100%;
+    text-align: center;
+
+  }
+
+  .navbar-nav > li {
+      float: none;
+      display: inline-block;
+    }
+
 
   </style>
   <body>
@@ -91,7 +102,7 @@
         <a class="navbar-brand">&nbsp;</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav">
             <li class="nav-item active">
 
               <a class="nav-link " href="/dashboard_egresado?username={{usuario.dni}}">Inicio<span class="sr-only">(current)</span></a>
@@ -101,18 +112,21 @@
               <a class="nav-link " href="/dashboard_egresado/circulo_amigos?username={{usuario.dni}}">Amigos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
-
-              <a class="nav-link " href="/dashboard_egresado/profile_graduated?username={{usuario.dni}}">Perfil<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item ">
               <a class="nav-link " href="/dashboard_egresado/edit_info_gra?username={{usuario.dni}}">Cuenta<span class="sr-only">(current)</span></a>
 
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
             </li>
-          </ul>
-        </div>
+          
+        	<li class="nav-item">
+        	<a class="nav-link" href="/dashboard_egresado/profile_graduated?username={{usuario.dni}}">{{usuario.user.first_name}} {{usuario.user.last_name}}</a>
+        	</li>
+        	<li class="nav-item">
+				<img class="circular" src="{{usuario.profile_picture.url}}" >
+        	</li>
+        	</ul>
+		</div>
       </nav>
 
       <section class="container-fluid" style="padding-top: 70px; ">
