--- a/web/template/Egresado/perfilEditado.html
+++ b/web/template/Egresado/perfilEditado.html
@@ -16,14 +16,17 @@
             <li class="nav-item ">
               <a class="nav-link " href="/dashboard_egresado/circulo_amigos?username={{usuario.dni}}">Amigos<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link " href="/dashboard_egresado/profile_graduated?username={{usuario.dni}}">Perfil<span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item ">
               <a class="nav-link " href="/dashboard_egresado/edit_info_gra?username={{usuario.dni}}">Cuenta<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/dashboard_egresado/profile_graduated?username={{usuario.dni}}">{{usuario.user.first_name}} {{usuario.user.last_name}}</a>
+            </li>
+            <li class="nav-item">
+              <img class="circular1" src="{{usuario.profile_picture.url}}" >
             </li>
           </ul>
         </div>
