--- a/web/template/Admin/crearActividades.html
+++ b/web/template/Admin/crearActividades.html
@@ -82,14 +82,14 @@
                 <div class="form-group row">
                   <label for="example-date-input" class="col-2 col-form-label">Fecha:</label>
                   <div class="col-10">
-                    <input class="form-control" name="date_activity" value="{{datos.date_activity}}" type="date" value="2017-12-12" id="example-date-input">
+                    <input class="form-control" name="date_activity"  type="date" value="{{fecha}}" id="example-date-input">
                   </div>
                 </div>
 
                 <div class="form-group row">
                   <label for="example-time-input" class="col-2 col-form-label">Hora:</label>
                   <div class="col-10">
-                    <input class="form-control" type="time" value="{{datos.time_activity}}" name="time_activity" value="13:45:00" id="example-time-input">
+                    <input class="form-control" type="time" name="time_activity" value="{{hora}}" id="example-time-input">
                   </div>
                 </div>
 
