--- a/web/template/Root/aceptarCuentasAdmin.html
+++ b/web/template/Root/aceptarCuentasAdmin.html
@@ -31,6 +31,21 @@
   </div>
 </nav>
 
+      <script language="JavaScript">
+      function confirmacion(id_p , username , action, usuario){
+          if (confirm('¿Estas seguro que deseas activar el registro del usuario '+ usuario +'?')){
+             document.location.href = '/aceptar_cuentas_admin?username='+username+'&id='+id_p+'&action='+action
+          }
+      }
+      </script>
+
+      <script language="JavaScript">
+      function confirmacion1(id_p , username , action, usuario){
+          if (confirm('¿Estas seguro que deseas eliminar el registro del usuario '+ usuario +'?')){
+             document.location.href = '/aceptar_cuentas_admin?username='+username+'&id='+id_p+'&action='+action
+          }
+      }
+      </script>
 
 
       <section class="container">
@@ -64,8 +79,9 @@
 
                           </div>
                           <div class="col-sm-4 col-md-5 col-lg-4 align-self-center ">
-                            <button type="submit" class="btn btn-danger" name="tipo" value="{{pre_registro.id}} Eliminar">Declinar</button>
-                            <button type="submit" class="btn btn-primary" name="tipo" value="{{pre_registro.id}} Aceptar">Crear usuario</button>
+                            <button type="button" class="btn btn-danger" name="tipo" onclick='confirmacion1("{{pre_registro.id}}" , "{{usuario.username}}" , "Eliminar" , "{{pre_registro.first_name}} {{pre_registro.last_name}}")'>Declinar</button>
+
+                            <button type="button" class="btn btn-primary" name="tipo" onclick='confirmacion("{{pre_registro.id}}" , "{{usuario.username}}" , "Aceptar" , "{{pre_registro.first_name}} {{pre_registro.last_name}}" )'>Crear usuario</button>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#{{pre_registro.id}}">
                             <b>!</b>
                             </button>
