--- a/web/template/Egresado/editarInfo.html
+++ b/web/template/Egresado/editarInfo.html
@@ -24,6 +24,9 @@
               <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="/dashboard_egresado/historial?username={{usuario.dni}}">Historial Correos<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/dashboard_egresado/profile_graduated?username={{usuario.dni}}">{{usuario.user.first_name}} {{usuario.user.last_name}}</a>
             </li>
             <li class="nav-item">
