--- a/web/template/Egresado/historial.html
+++ b/web/template/Egresado/historial.html
@@ -2,7 +2,8 @@
 {%load staticfiles%}
 
 {% block contenido_egresado %}
-    <nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-primary ">
+        <title>Historial Correos</title>
+        <nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-primary ">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +23,7 @@
             <li class="nav-item ">
               <a class="nav-link" href="/logout">Cerrar Sesión <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link " href="/dashboard_egresado/historial?username={{usuario.dni}}">Historial Correos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -35,20 +36,16 @@
         </div>
       </nav>
 
-        <section class="container" style="padding-top: 130px;">
-      	<div class="row">
-      		<div class="col-lg-12">
-      			 <center><h3>Correo electrónico</h3></center><hr><br>
-      		</div>
-      	</div>
-      	<div class="row">
-      		<div class="col-lg-12">
-      			<center>
-      			<h6>Su mensaje fue enviado satisfactoriamente</h6><br>
-      			<button type="button" class="btn btn-success" onclick="location.href='/dashboard_egresado/circulo_amigos?username={{usuario.dni}}';">Aceptar</button>
-      			</center>
-      		</div>
-      	</div>
+      <section class="container" style="padding-top: 70px;">
+      <h1 align="center">Historial de Correos Enviados</h1>
+      {% for registro in historial  %}
+            <h5>Asunto: {{registro.subject}}</h5>
+            <h5>Mensaje: {{registro.message}}</h5>
+            <h5>Remitente: {{registro.from_email}}</h5>
+            <h5>Destinatario: {{registro.to_email}}</h5>
+            <h5>Fecha de Envio: {{registro.date_email}}</h5><br>
+        
+      {% endfor %}
       </section>
 
 {% endblock contenido_egresado %}
