--- a/web/template/Egresado/dashboardEgresado.html
+++ b/web/template/Egresado/dashboardEgresado.html
@@ -122,6 +122,10 @@
             <li class="nav-item ">
               <a class="nav-link " href="/dashboard_egresado/historial?username={{usuario.dni}}">Historial Correos<span class="sr-only">(current)</span></a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link " href="/dashboard_egresado/search_friend?username={{usuario.dni}}">Buscar Amigos<span class="sr-only">(current)</span></a>
+            </li>
           
         	<li class="nav-item">
         	<a class="nav-link" href="/dashboard_egresado/profile_graduated?username={{usuario.dni}}">{{usuario.user.first_name}} {{usuario.user.last_name}}</a>
