--- a/web/template/Egresado/historial.html
+++ b/web/template/Egresado/historial.html
@@ -27,6 +27,9 @@
               <a class="nav-link " href="/dashboard_egresado/historial?username={{usuario.dni}}">Historial Correos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="/dashboard_egresado/search_friend?username={{usuario.dni}}">Buscar Amigos<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/dashboard_egresado/profile_graduated?username={{usuario.dni}}">{{usuario.user.first_name}} {{usuario.user.last_name}}</a>
             </li>
             <li class="nav-item">
@@ -41,8 +44,8 @@
       {% for registro in historial  %}
             <h5>Asunto: {{registro.subject}}</h5>
             <h5>Mensaje: {{registro.message}}</h5>
-            <h5>Remitente: {{registro.from_email}}</h5>
-            <h5>Destinatario: {{registro.to_email}}</h5>
+            <h5>Remitente: {{registro.from_user}}</h5>
+            <h5>Destinatario: {{registro.to_user}}</h5>
             <h5>Fecha de Envio: {{registro.date_email}}</h5><br>
         
       {% endfor %}
