--- a/web/template/FormatosCorreo/FormatoCreateAct.html
+++ b/web/template/FormatosCorreo/FormatoCreateAct.html
@@ -5,7 +5,7 @@ El nombre de la actividad es: {{actividad}}
 Click en el siguiente link para iniciar sesión
 {% block reset_link %}
 
-http://{{ domain }}{% url 'web:login_egresado'%}
+https://{{ domain }}{% url 'web:login_egresado'%}
 {% endblock reset_link %}
 
 camina hacia el futuro
