--- a/web/template/Egresado/searchFriend.html
+++ b/web/template/Egresado/searchFriend.html
@@ -159,7 +159,7 @@
                     </div>
                   {% endif %}
                     <div class="col-lg-6 align-self-center ">
-                      <h6>{{user.user.first_name}} {{user.user.last_name}}</h6> 
+                      <h6>{{user.user.first_name}} {{user.user.last_name}} , {{user.career}}</h6> 
                     </div>
                     <div class="col-lg-3 align-self-center ">
 
