commit final xd

--- a/web/template/Bases/BaseAdmin.html
+++ b/web/template/Bases/BaseAdmin.html
@@ -79,6 +79,6 @@
 
     <script src={% static "js/editInfoAdm.js" %}></script>
     <script src={% static "js/activityScript.js" %}></script>
-
+    <script src={% static "js/accountsManagement.js" %}></script>
 </body>
 </html>
