--- a/web/template/Admin/aceptarCuentas.html
+++ b/web/template/Admin/aceptarCuentas.html
@@ -53,13 +53,8 @@
           <div class="col-md-12">
               {% if not pre_registros %}
                 <center><h3 style="padding-top: 100px;">No hay solicitudes pendientes</h3></center>
-              {%endif%}
-
-              {% if mensaje.0 %}
-
-                <h1>{{mensaje.1}}</h1>
-                
               {% endif %}
+
               <ul class="list-group ">
                 {% for pre_registro in pre_registros %}
 
@@ -135,6 +130,25 @@
   </div>
 </div>
 {% endfor %}
+
+{% if mensaje.0 %}
+        <input id="valorButton" style="display: none" value="{{mensaje.0}}">
+        <div class="modal fade" id="modalButton">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              </div>
+              <div class="modal-body">
+                <center>
+                    <h6>{{mensaje.1}}</h6>
+                </center>
+              </div>
+            </div>
+          </div>
+        </div>        
+{% endif %}
+
   
 {% endblock contenido_admin %}
 
