--- a/web/template/Root/aceptarCuentasAdmin.html
+++ b/web/template/Root/aceptarCuentasAdmin.html
@@ -56,10 +56,6 @@
                 <center><h3 style="padding-top: 100px;">No hay solicitudes pendientes</h3></center>
               {%endif%}
 
-              {% if mensaje.0 %}
-                <h1>{{mensaje.1}}</h1>
-                
-              {% endif %}
               <ul class="list-group">
 
                 
@@ -133,4 +129,25 @@
   </div>
 </div>
 {% endfor %}
+
+{% if mensaje.0 %}
+        <input id="valorButtonRoot" style="display: none" value="{{mensaje.0}}">
+        <div class="modal fade" id="modalButtonRoot">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              </div>
+              <div class="modal-body">
+                <center>
+                    <h6>{{mensaje.1}}</h6>
+                </center>
+              </div>
+            </div>
+          </div>
+        </div>        
+{% endif %}
+
+
+
 {% endblock contenido_root %}
