--- a/web/template/Admin/GestionCuentasE.html
+++ b/web/template/Admin/GestionCuentasE.html
@@ -96,10 +96,25 @@
   </table>
 </form>
 
-{% if mensaje.0 %}
 
-	<h6>{{mensaje.1}}</h6>
-	
+{% if mensaje.0 %}
+        <input id="valorGestion" style="display: none" value="{{mensaje.0}}">
+        <div class="modal fade" id="modalGestion">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              </div>
+              <div class="modal-body">
+                <center>
+                    <h6>{{mensaje.1}}</h6>
+                </center>
+              </div>
+            </div>
+          </div>
+        </div>        
 {% endif %}
+
+
 	
 {% endblock contenido_admin %}
