--- a/web/template/Bases/BaseRoot.html
+++ b/web/template/Bases/BaseRoot.html
@@ -47,5 +47,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
     <script src={% static "js/accountsManagement.js" %}></script>
+    <script src={% static "js/gestion.js" %}></script>
 </body>
 </html>
