--- a/web/template/Root/GestionCuentas.html
+++ b/web/template/Root/GestionCuentas.html
@@ -97,9 +97,21 @@
 </form>
 
 {% if mensaje.0 %}
-
-	<h6>{{mensaje.1}}</h6>
-	
+        <input id="valorGestion" style="display: none" value="{{mensaje.0}}">
+        <div class="modal fade" id="modalGestion">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              </div>
+              <div class="modal-body">
+                <center>
+                    <h6>{{mensaje.1}}</h6>
+                </center>
+              </div>
+            </div>
+          </div>
+        </div>        
 {% endif %}
 	
 {% endblock contenido_root %}
